Add JVM args for tests to fix InaccessibleObjectException. Added new json for testing